--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </figure>
 
             <p>
-                I love working and tinkering with computers in every sort! I'm mainly interested in and enjoy learning about embedded programming, server administration, networking, operating system development and <a href="https://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
+                I love working and tinkering with computers of every sort! I'm mainly interested in and enjoy learning about embedded programming, server administration, networking, operating system development and <a href="https://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
             </p>
 
             <h2 id="my-stuff-header">Check out my stuff!</h2>
