Added alt text to images

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <main>
             <figure id="me">
-                <img src="/assets/me.jpg">
+                <img src="/assets/me.jpg" alt="Me on a hiking trail pointing at a sign">
                 <figcaption>Hiking in Peru</figcaption>
                 <hr>
             </figure>
@@ -50,7 +50,7 @@
             </ul>
                 
             <figure id="band">
-                <img src="/assets/band.jpg">
+                <img src="/assets/band.jpg" alt="Four band members playing music on stage">
                 <figcaption>Space Park at The Brass Monkey</figcaption>
             </figure>
         </main>
@@ -58,7 +58,7 @@
         <hr>
 
         <footer>
-            <a href="https://github.com/tommyjanna/personal-website">Source Code for this Site</a> 
+            <a href="https://github.com/tommyjanna/personal-website">Source code for this site</a> 
         </footer>
     </div>
 
