updated image caption

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 
             <figure id="band">
                 <img src="/assets/band.jpg" alt="Four band members playing music on stage">
-                <figcaption>Space Park at The Brass Monkey</figcaption>
+                <figcaption>Space Park at The Brass Monkey (me on the drums!)</figcaption>
             </figure>
         </main>
         
