--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <h2 id="my-stuff-header">Check out my stuff!</h2>
             <ul id="my-stuff">
-                <li><a href="/assets/resume.pdf">Resume</a> <em>(UNDER CONSTRUCTION)</em></li>
+                <li><a href="/assets/resume.pdf">Resume</a></li>
 
                 <li><a href="https://www.linkedin.com/in/thomas-janna-791541199">LinkedIn</a></li>
 
