--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 <li><a href="/assets/resume.pdf">Resume</a></li>
 
                 <li><a href="https://www.linkedin.com/in/thomas-janna-791541199">LinkedIn</a></li>
+                
+                <li><a href="https://github.com/tommyjanna/">GitHub</a></li>
 
                 <li>Listen to my band, Space Park on <a href="https://open.spotify.com/artist/2X3Wv9vXpVfQh0Nw2qFmGu?si=JR1wQpPRRaWsvzkXuH-zqQ&dl_branch=1https://open.spotify.com/artist/2X3Wv9vXpVfQh0Nw2qFmGu?si=JR1wQpPRRaWsvzkXuH-zqQ&dl_branch=1">Spotify</a>, <a href="https://www.youtube.com/watch?v=7DeFmfAb-Bo&list=OLAK5uy_lAtGUeIC8sk0HiSpQ1NZzt9nnGOjkOcIA">YouTube</a> and <a href="https://music.apple.com/us/artist/space-park/1525030617https://music.apple.com/us/artist/space-park/1525030617">Apple Music</a></li>
 
