Updated page content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <h1>Welcome to Tommy's Website</h1> 
             <h3>
-                Computer Science student at Queen's University's <a href="http://www.cs.queensu.ca">School of Computing</a>.
+                Computer Science student at Carleton University's <a href="https://carleton.ca/scs/">School of Computer Science</a>.
             </h3>
         </header>
 
@@ -33,7 +33,7 @@
             </figure>
 
             <p>
-                I love working and tinkering with computers of every sort! I'm mainly interested in and enjoy learning about embedded programming, server administration, networking, operating system development and <a href="https://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
+                I am passionate about working and tinkering with computers of every sort! I enjoy learning about embedded and low-level systems programming, operating systems, networking, distributed computing, server administration and <a href="https://en.wikipedia.org/wiki/Free_software">free software</a>.
             </p>
 
             <h2 id="my-stuff-header">Check out my stuff!</h2>
