--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </figure>
 
             <p>
-                I am passionate about working and tinkering with computers of every sort! I enjoy learning about embedded and low-level systems programming, operating systems, networking, distributed computing, server administration and <a href="https://en.wikipedia.org/wiki/Free_software">free software</a>.
+                I am passionate about working and tinkering with computers of every sort! I enjoy learning about embedded and low-level systems programming, computer networking and <a href="https://en.wikipedia.org/wiki/Free_software">free software</a>.
             </p>
 
             <h2 id="my-stuff-header">Check out my stuff!</h2>
@@ -46,9 +46,9 @@
 
                 <li>Listen to my band, Space Park on <a href="https://open.spotify.com/artist/2X3Wv9vXpVfQh0Nw2qFmGu?si=JR1wQpPRRaWsvzkXuH-zqQ&dl_branch=1https://open.spotify.com/artist/2X3Wv9vXpVfQh0Nw2qFmGu?si=JR1wQpPRRaWsvzkXuH-zqQ&dl_branch=1">Spotify</a>, <a href="https://www.youtube.com/watch?v=7DeFmfAb-Bo&list=OLAK5uy_lAtGUeIC8sk0HiSpQ1NZzt9nnGOjkOcIA">YouTube</a> and <a href="https://music.apple.com/us/artist/space-park/1525030617https://music.apple.com/us/artist/space-park/1525030617">Apple Music</a></li>
 
-                <li><a href="https://www.youtube.com/channel/UCCCTVtn3AMwgSjH2mgR1F0A">Personal YouTube Channel</a></li>
+                <li><a href="https://www.youtube.com/channel/UCCCTVtn3AMwgSjH2mgR1F0A">Personal YouTube channel</a></li>
 
-                <li><a href="https://github.com/tommyjanna/dotfiles.git">My Linux desktop and dotfiles</a></li>
+                <li><a href="https://github.com/tommyjanna/dotfiles.git">My dotfiles</a></li>
             </ul>
                 
             <figure id="band">
